--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,6 +36,7 @@
 
         <div class="inline-connexion text-center">
             <button class="btn btn-violet" type="submit">Se connecter</button>
+            <a href="{{ path('app_register') }}">Enregistrer utilisateur</a>
             <div class="checkbox"><label><input type="checkbox" name="_remember_me"> Se rappeler de moi</label></div>
         </div>
 
