--- a/public/CSS/accueilCarousel.css
+++ b/public/CSS/accueilCarousel.css
@@ -4,47 +4,23 @@
     color: #4A00E0;
     font-family: Montserrat;
     margin-bottom: 0;
-    min-height: 10vh;
-    line-height: 2.2em;
-}
-.carousel {
-    display: flex;
-    flex-wrap: wrap;
+    line-height: 10vh;
+    height: 10vh;
+    font-size: 2em;
 }
 
 .carousel-inner {
-    flex: 1;
     height: 90vh;
 }
 
-/*.images {*/
-/*    background-size: cover;*/
-/*    justify-content: center;!important;*/
-/*    height: 48em;!important;*/
-/*    object-fit: cover;*/
-/*    padding: 0px; !important;*/
-/*}*/
-/*.carousel-inner {*/
-/*    height: 100vh;*/
-/*}*/
-/*.box {*/
-/*    padding: 0px;!important;*/
-/*}*/
 .container-fluid {
-    padding: 0px;!important;
+    padding: 0px
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
-    /*text-shadow: #f1f2f3 1px 0 10px;*/
     width: 56px;
     height: 56px;
     background-color: #fc4a1a;
     background-size: auto;
     border-radius: 40px;
 }
-/*.carousel-control-prev-icon {*/
-/*    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f5f5f591' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");*/
-/*}*/
-/*.carousel-control-next-icon {*/
-/*    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f1f2f300' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");*/
-/*}*/
