--- a/templates/accueil/accueilfront.html.twig
+++ b/templates/accueil/accueilfront.html.twig
@@ -1,14 +1,26 @@
 {% extends 'base.html.twig' %}
 
+
+
 {#{% block title %} {{ parent() }} Accueil!{% endblock %}#}
+
+
 
 {% block accueilCarouselCss %}
     <link rel="stylesheet" href="{{ asset('CSS/accueilCarousel.css') }}">
 {% endblock %}
 
 
+
+
 {% block main %}
 
+
+    <div class="row">
+        <div class="col-12">
+            <h1 id="prez">Avec Sortir.com, on se rapproche &#128521;</h1>
+        </div>
+    </div>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -43,6 +55,5 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        <h1 id="prez">Avec Sortir.com, on se rapproche &#128521;</h1>
     </div>
 {% endblock %}
