Fix bouton rechercher ville

--- a/templates/cities/villes.html.twig
+++ b/templates/cities/villes.html.twig
@@ -19,7 +19,7 @@
                 <div class="form-group row">
                     <label class="col-4 my-auto">Le nom contient :</label>
                     <div class="col-4 my-auto"><input class="form-control" type="text" placeholder="Ville"></div>
-                    <div class="col-4"><button type="submit" class="btn btn-orange mb-2">Rechercher</button></div>
+                    <div class="col-4 "><button type="submit" class="btn btn-orange">Rechercher</button></div>
                 </div>
             </form>
         </div>
