--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -14,7 +14,7 @@
             <div class="card">
                 <div class="card-body">
                     <img class="profil-picture"
-{#                         src="{{ asset('images/profilePicture/'~app.user.photo.photoName) }}"#}
+                         src="{{ asset('images/profilePicture/'~app.user.photoName) }}"
                          alt="La photo de profil">
                 </div>
             </div>
@@ -63,8 +63,8 @@
                     </div>
 
                     <div class="form-group row">
-                        {{ form_label(form.photo) }}
-                        {{ form_widget(form.photo) }}
+                        {{ form_label(form.photoFile) }}
+                        {{ form_widget(form.photoFile) }}
                     </div>
 
 {#                    {% if is_granted("ROLE_ADMIN") %}#}
