Resolution modifier profil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,10 @@
                     </li>
                     <hr>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('detail', {'id': app.user.id}) }}">Mon profil</a>
+                    </li>
+                    <hr>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_register') }}" title="register">Enregistrer un utilisateur</a>
                     </li>
                     <hr>
