--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -67,17 +67,30 @@
 {#                        {{ form_widget(form.photoFile) }}#}
 {#                    </div>#}
 
-{#                    {% if is_granted("ROLE_ADMIN") %}#}
-                    <div class="form-control">
-                        {{ form_label(form.roles) }}
-                        {{ form_widget(form.roles) }}
-                    </div>
-{#                        {% else %}#}
-{#                            <div class="form-control" disabled>#}
-{#                                {{ form_label(form.roles) }}#}
-{#                                {{ form_widget(form.roles) }}#}
-{#                            </div>#}
+{#                    {{ dump(app.user.roles("ROLE_ADMIN")) }}#}
+
+{#                    {% if not app.user.roles == "ROLE_ADMIN"%}#}
+{#                    <div class="form-control" disabled="true">#}
+{#                        {{ form_label(form.roles) }}#}
+{#                        {{ form_widget(form.roles) }}#}
+{#                    </div>#}
+{#                    {% else %}#}
+{#                        <div class="form-control">#}
+{#                            {{ form_label(form.roles) }}#}
+{#                            {{ form_widget(form.roles) }}#}
+{#                        </div>#}
 {#                    {% endif %}#}
+
+                    {% for role in app.user.roles %}
+                        <p>{{ role }}</p>
+                        {% if role == "ROLE_ADMIN" %}
+                            <div class="form-control">
+                                {{ form_label(form.roles) }}
+                                {{ form_widget(form.roles) }}
+                            </div>
+
+                        {% endif %}
+                    {% endfor %}
                     <div>
                         <button type="submit" class="btn btn-primary">Enregistrer</button>
                         <button type="reset" class="btn btn-primary">Annuler</button>
@@ -87,7 +100,7 @@
             </div>
         </div>
 
-    {{ form_end(form) }}
+{#    {{ form_end(form) }}#}
 
     </div>
 
