--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -55,8 +55,6 @@
                         {{ form_widget(form.plainPassword) }}
                     </div>
 
-                    <!-- **confirmation password** -->
-
                     <div class="form-group row">
                         {{ form_label(form.campus) }}
                         {{ form_widget(form.campus) }}
@@ -82,11 +80,15 @@
                 </div>
             </div>
         </div>
+
         <div>
             <button type="submit" class="btn btn-primary">Enregistrer</button>
             <button type="reset" class="btn btn-primary">Annuler</button>
         </div>
-{#    {{ form_end(form) }}#}
+
+    {{ form_rest(form) }}
+
+    {{ form_end(form) }}
 
     </div>
 
