MAJ affichage des profils

--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -18,7 +18,7 @@
             <div class="card">
                 <div class="card-body">
                     <img class="profil-picture"
-                         src="{{ asset('images/profilePicture/'~app.user.photoName) }}"
+                         src="{{ asset('images/profilePicture/'~account.photoName) }}"
                          alt="La photo de profil">
                 </div>
             </div>
