--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
     {% block creationSortieCss %}{% endblock %}
     {% block annulationSortieCss %}{% endblock %}
     {% block formRegistratinoCss %}{% endblock %}
+    {% block editProfilCss %}{% endblock %}
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
