--- a/templates/creation_sortie/creation.html.twig
+++ b/templates/creation_sortie/creation.html.twig
@@ -8,7 +8,7 @@
 
 {% block main %}
 
-    <h2 class="text-center content-creation">Créer une sortie</h2>
+    <h2 class="text-center content-profil">Créer une sortie</h2>
 
     {{ form_start(creationSortieForm) }}
 
