--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -2,93 +2,107 @@
 
 {% block title %} {{ parent() }} Modifier profil{% endblock %}
 
+{% block editProfilCss %}
+    <link rel="stylesheet" href="{{ asset('CSS/editProfil.css') }}">
+{% endblock %}
+
 {% block main %}
 
-    <h1 class="text-center">Modifier profil </h1>
+    <div class="container">
 
-    {{ form_start(form) }}
+        <h1 class="text-center content-profil">Modifier le profil</h1>
 
-    <div class="row">
+        <div class="d-flex justify-content-around row">
 
-        <div class="col-sm-4"> <!--colone de gauche-->
-            <div class="card">
-                <div class="card-body">
-                    <img class="profil-picture"
-                         src="{{ asset('images/profilePicture/'~app.user.photoName) }}"
-                         alt="La photo de profil">
-                </div>
+            <div class="col-sm-8 col-lg-3 mb-sm-5 image">
+                <img class="profil-picture" src="{{ asset('IMAGES/profilPicture/5f081ad31a954.jpeg') }}"
+                     {#              src="{{ asset('IMAGES/profilPicture/' ~ app.user.photo) }}"#}alt="La photo de profil">
             </div>
-        </div>
 
+            <div class="col-sm-8 col-lg-6 card">
 
-        <div class="col-sm-8"> <!--colone de droite-->
-            <div class="card">
-                <div class="card-body">
+                {{ form_start(form) }}
 
-                    <div class="form-group row">
-                        {{ form_label(form.pseudo) }}
+                <div class="form-group row">
+                    {{ form_label(form.pseudo) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.pseudo) }}
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        {{ form_label(form.prenom) }}
+                <div class="form-group row">
+                    {{ form_label(form.prenom) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.prenom) }}
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        {{ form_label(form.nom) }}
+                <div class="form-group row">
+                    {{ form_label(form.nom) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.nom) }}
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        {{ form_label(form.telephone) }}
+                <div class="form-group row">
+                    {{ form_label(form.telephone) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.telephone) }}
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        {{ form_label(form.email) }}
+                <div class="form-group row">
+                    {{ form_label(form.email) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.email) }}
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        {{ form(form.plainPassword) }}
-                        {{ form_widget(form.plainPassword) }}
-                    </div>
-
-                    <div class="form-group row">
-                        {{ form_label(form.campus) }}
+                <div class="form-group row">
+                    {{ form_label(form.campus) }}
+                    <div class="col-sm-12 col-lg-8">
                         {{ form_widget(form.campus) }}
                     </div>
-
-                    <div class="form-group row">
-                        {{ form_label(form.photoFile) }}
-                        {{ form_widget(form.photoFile) }}
-                    </div>
-
-                    {% for role in app.user.roles %}
-                        <p>{{ role }}</p>
-                        {% if role == "ROLE_ADMIN" %}
-                            <div class="form-control">
-                                {{ form_label(form.roles) }}
-                                {{ form_widget(form.roles) }}
-                            </div>
-
-                        {% endif %}
-                    {% endfor %}
-
-
                 </div>
+
+                <div class="form-group row">
+                    {{ form_label(form.password.first) }}
+                    <div class="col-sm-12 col-lg-8">
+                        {{ form_widget(form.password.first) }}
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    {{ form_label(form.password.second) }}
+                    <div class="col-sm-12 col-lg-8">
+                        {{ form_widget(form.password.second) }}
+                    </div>
+                </div>
+
+{#                    <div class="form-group row">#}
+{#                        {{ form_label(form.photoFile) }}#}
+{#                        {{ form_widget(form.photoFile) }}#}
+{#                    </div>#}
+
+                    {% if is_granted("ROLE_ADMIN") %}
+
+                        {{ form_label(form.roles) }}
+                        {{ form_widget(form.roles) }}
+
+                        {% else %}
+                            {{ form_label(form.roles) }}
+                            {{ form_widget(form.roles) }}
+                    {% endif %}
+
+                <div class="text-center">
+                    <button type="submit" class="btn btn-orange">Enregistrer</button>
+                    <button type="reset" class="btn btn-orange">Annuler</button>
+                </div>
+
+                {{ form_end(form) }}
+
             </div>
         </div>
-
-        <div>
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
-            <button type="reset" class="btn btn-primary">Annuler</button>
-        </div>
-
-    {{ form_rest(form) }}
-
-    {{ form_end(form) }}
 
     </div>
 
