MAJ affichage des profils

--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -15,8 +15,9 @@
     <div class="d-flex justify-content-around row">
 
         <div class="col-sm-8 col-lg-3 image">
-            <img class="profil-picture" src="{{ asset('IMAGES/profilPicture/5f081ad31a954.jpeg') }}"
-{#              src="{{ asset('IMAGES/profilPicture/' ~ app.user.photo) }}"#}alt="La photo de profil">
+            <img class="profil-picture"
+                 src="{{ asset('images/profilePicture/' ~ account.photoName) }}"
+                 alt="La photo de profil">
         </div>
 
 
