--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,8 +13,9 @@
 
     <h1>Register</h1>
 
+    <div class="form-group">
     {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.pseudo) }}
+    {{ form_row(registrationForm.pseudo, { 'attr': {'class': 'pseudo'} }) }}
     {{ form_row(registrationForm.prenom) }}
     {{ form_row(registrationForm.nom) }}
     {{ form_row(registrationForm.telephone) }}
@@ -25,8 +26,9 @@
     {{ form_row(registrationForm.plainPassword, {
         label: 'Password'
     }) }}
-
+    </div>
 
     <button type="submit" class="btn">Register</button>
+    {{ form_rest(registrationForm) }}
     {{ form_end(registrationForm) }}
 {% endblock %}
