--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -10,55 +10,59 @@
 
     <div class="container">
 
-    <h1 class="text-center content-profil">Compte de {{ account.pseudo }}</h1>
+        <h1 class="text-center content-profil">Compte de {{ account.pseudo }}</h1>
 
-    <div class="d-flex justify-content-around row">
+        <div class="d-flex justify-content-around row">
 
-        <div class="col-sm-8 col-lg-3 image">
-            <img class="profil-picture"
-                 src="{{ asset('images/profilePicture/' ~ account.photoName) }}"
-                 alt="La photo de profil">
+            <div class="col-sm-8 col-lg-3 image">
+                <img class="profil-picture"
+                     src="{{ asset('images/profilePicture/' ~ account.photoName) }}"
+                     alt="La photo de profil">
+            </div>
+
+
+            <div class="col-sm-8 col-lg-6 card">
+
+                <div class="form-group row">
+                    <p>Prénom : {{ account.prenom }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Nom : {{ account.nom }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Téléphone : {{ account.telephone }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Email : {{ account.email }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Campus : {{ account.campus.getNomCampus() }}</p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="d-flex justify-content-center row mt-5">
+            <a href="{{ path('edit', {'id': account.id}) }}" class="btn btn-orange" role="button" aria-pressed="true"
+               value="edit">Modifier profil</a>
+            {% for role in app.user.roles %}
+                {% if role == "ROLE_ADMIN" %}
+                    <a href="{{ path('compte', {'id': account.id}) }}" class="btn btn-orange" role="button"
+                       aria-pressed="true" value="edit">Retour</a>
+                {% else %}
+                    <a href="{{ path('home', {'id': account.id}) }}" class="btn btn-orange" role="button"
+                       aria-pressed="true" value="edit">Retour</a>
+                {% endif %}
+            {% endfor %}
+
         </div>
 
 
-        <div class="col-sm-8 col-lg-6 card">
-
-                    <div class="form-group row">
-                        <p>Prénom : {{ account.prenom }}</p>
-                    </div>
-
-                    <div class="form-group row">
-                        <p>Nom : {{ account.nom }}</p>
-                    </div>
-
-                    <div class="form-group row">
-                        <p>Téléphone : {{ account.telephone }}</p>
-                    </div>
-
-                    <div class="form-group row">
-                        <p>Email : {{ account.email }}</p>
-                    </div>
-
-                    <div class="form-group row">
-                        <p>Campus : {{ account.campus.getNomCampus() }}</p>
-                    </div>
-        </div>
-
-
     </div>
-
-    <div class="d-flex justify-content-center row mt-5">
-        <a href="{{ path('edit', {'id': account.id})  }}" class="btn btn-orange" role="button" aria-pressed="true" value="edit">Modifier profil</a>
-        <a href="{{ path('edit', {'id': account.id})  }}" class="btn btn-orange" role="button" aria-pressed="true" value="edit">Retour</a>
-    </div>
-
-
-    </div>
-
-{#        {% elseif {{ path('accueil') }} %}#}
-{#            <h1>You can't access that button fucking nerd</h1>#}
-{#        {% endif %}#}
-{#    {% endif %}#}
-{#{% block title %}#}
-{#    Ideas details | {{ parent() }}#}
+    {#    Ideas details | {{ parent() }}#}
 {% endblock %}
