--- a/public/CSS/editProfil.css
+++ b/public/CSS/editProfil.css
@@ -38,8 +38,10 @@ h2{
     min-height: 40vh;
 }
 
-.image{
+.profil-picture{
     background-color: #dfdfdf;
     border-radius: 20px;
     max-height: 40vh;
+    max-width: 40vh;
+    background-size: cover;
 }
