--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -74,14 +74,14 @@
                 </div>
 
                 <div class="form-group row">
-                    {% for role in app.user.roles %}
-                        {% if role == "ROLE_ADMIN" %}
-                            {{ form_label(form.roles) }}
+                    {% if app.user.roles != ["ROLE_ADMIN"] %}
+                        {% do form.roles.setRendered %}
+                    {% else %}
+                        {{ form_label(form.roles) }}
                             <div class="col-sm-12 col-lg-8">
                                 {{ form_widget(form.roles) }}
                             </div>
                         {% endif %}
-                    {% endfor %}
                 </div>
 
                 <div class="form-group row">
