--- a/templates/compte/list.html.twig
+++ b/templates/compte/list.html.twig
@@ -12,7 +12,11 @@
         {% for accounts in account %}
             <div class="d-flex justify-content-around col-sm-6 col-lg-4">
                 <div class="cardUtilisateur text-center">
-                    <div class="photo"></div>
+                    <div class="photo">
+                        <img class="profil-picture"
+{#                             src="{{ asset('images/profilePicture/' ~ account.photoName) }}"#}
+                             alt="">
+                    </div>
                     <h3 class="align-middle userPseudo">{{ accounts.pseudo | capitalize }}</h3>
                     <p class="voir align-bottom">
                         <a id="nono" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">Voir le profil</a>
