--- a/public/CSS/editProfil.css
+++ b/public/CSS/editProfil.css
@@ -6,7 +6,7 @@
 .btn-orange{
     background-color: #e36414;
     color: white;
-    margin: 40px;
+    margin: 40px 40px 16px 40px;
 }
 
 .btn-orange:hover{
@@ -39,7 +39,6 @@ h2{
 }
 
 .profil-picture{
-    background-color: #dfdfdf;
     border-radius: 20px;
     max-height: 40vh;
     max-width: 40vh;
