--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -17,7 +17,7 @@
             <div class="col-sm-8 col-lg-3 mb-sm-5 image">
                 <img class="profil-picture"
                      src="{{ asset('images/profilePicture/' ~ app.user.photoName) }}"
-                     alt="La photo de profil">
+                     alt="">
             </div>
 
             <div class="col-sm-8 col-lg-6 card">
