--- a/templates/compte/detailCompteUser.html.twig
+++ b/templates/compte/detailCompteUser.html.twig
@@ -2,13 +2,64 @@
 
 {% block title %} {{ parent() }} Compte Utilisateur {% endblock %}
 
+{% block editProfilCss %}
+    <link rel="stylesheet" href="{{ asset('CSS/editProfil.css') }}">
+{% endblock %}
+
 {% block main %}
-<h2>Compte de L'utilisateur {{ account.pseudo }}</h2>
-<ul>
-    <li>{{ account.nom }}</li>
-    <li>{{ account.prenom }}</li>
-    <li>{{ account.telephone }}</li>
-    <li>{{ account.email }}</li>
-    <li>{{ account.campus.getNomCampus() }}</li>
-</ul>
+    <div class="container">
+
+        <h1 class="text-center content-profil">Compte de {{ account.pseudo }}</h1>
+
+        <div class="d-flex justify-content-around row">
+
+            <div class="col-sm-8 col-lg-3 image">
+                <img class="profil-picture"
+                     src="{{ asset('images/profilePicture/' ~ account.photoName) }}"
+                     alt="La photo de profil">
+            </div>
+
+
+            <div class="col-sm-8 col-lg-6 card">
+
+                <div class="form-group row">
+                    <p>Prénom : {{ account.prenom }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Nom : {{ account.nom }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Téléphone : {{ account.telephone }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Email : {{ account.email }}</p>
+                </div>
+
+                <div class="form-group row">
+                    <p>Campus : {{ account.campus.getNomCampus() }}</p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="d-flex justify-content-center row mt-5">
+            <a href="{{ path('edit', {'id': account.id}) }}" class="btn btn-orange" role="button" aria-pressed="true"
+               value="edit">Modifier profil</a>
+{#            {% if app.user.roles == ["ROLE_ADMIN"] %}#}
+{#                <a href="{{ path('compte', {'id': account.id}) }}" class="btn btn-orange" role="button"#}
+{#                   aria-pressed="true" value="edit">Retour</a>#}
+{#            {% else %}#}
+                <a href="{{ path('home', {'id': account.id}) }}" class="btn btn-orange" role="button"
+                   aria-pressed="true" value="edit">Retour</a>
+{#            {% endif %}#}
+
+        </div>
+
+
+    </div>
+    {#    Ideas details | {{ parent() }}#}
 {% endblock %}
