--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -16,7 +16,7 @@
 
             <div class="col-sm-8 col-lg-3 mb-sm-5 image">
                 <img class="profil-picture"
-                     src="{{ asset('images/profilePicture/' ~ app.user.photoName) }}"
+                     src="{{ asset('images/profilePicture/' ~ account.photoName) }}"
                      alt="">
             </div>
 
