bouton non accessible en utilisateur profil orga

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -111,7 +111,7 @@
                         {% endfor %}
                     </td>
                     <td>
-                        <a href="{{ path('show', {'id': sortie.organisateur.id}) }}">{{ sortie.organisateur.prenom|capitalize }} {{ sortie.organisateur.nom|first|capitalize }}
+                        <a href="{{ path('detail', {'id': sortie.organisateur.id}) }}">{{ sortie.organisateur.prenom|capitalize }} {{ sortie.organisateur.nom|first|capitalize }}
                             .</a></td>
 
 
