--- a/templates/compte/detailCompteUser.html.twig
+++ b/templates/compte/detailCompteUser.html.twig
@@ -53,7 +53,7 @@
 {#                <a href="{{ path('compte', {'id': account.id}) }}" class="btn btn-orange" role="button"#}
 {#                   aria-pressed="true" value="edit">Retour</a>#}
 {#            {% else %}#}
-                <a href="{{ path('home', {'id': account.id}) }}" class="btn btn-orange" role="button"
+                <a href="{{ path('accueil') }}" class="btn btn-orange" role="button"
                    aria-pressed="true" value="edit">Retour</a>
 {#            {% endif %}#}
 
