--- a/templates/compte/list.html.twig
+++ b/templates/compte/list.html.twig
@@ -13,8 +13,8 @@
             <div class="d-flex justify-content-around col-sm-6 col-lg-4">
                 <div class="cardUtilisateur text-center">
                     <div class="photo">
-                        <img class="profil-picture"
-{#                             src="{{ asset('images/profilePicture/' ~ account.photoName) }}"#}
+                        <img
+                           src="{{ asset('images/profilePicture/' ~ accounts.photoName) }}"
                              alt="">
                     </div>
                     <h3 class="align-middle userPseudo">{{ accounts.pseudo | capitalize }}</h3>
