--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,24 +11,98 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+<div class="container">
 
-    <div class="form-group">
-    {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.pseudo, { 'attr': {'class': 'pseudo'} }) }}
-    {{ form_row(registrationForm.prenom) }}
-    {{ form_row(registrationForm.nom) }}
-    {{ form_row(registrationForm.telephone) }}
-    {{ form_row(registrationForm.email) }}
-    {{ form_row(registrationForm.campus) }}
-    {{ form_row(registrationForm.roles) }}
-    {{ form_row(registrationForm.actif) }}
-    {{ form_row(registrationForm.plainPassword, {
-        label: 'Password'
-    }) }}
+    <h1 class="text-center content-profil">Enregistrement</h1>
+
+    <div class="d-flex justify-content-around row">
+
+        <div class="col-sm-8 col-lg-6 card">
+
+            {{ form_start(registrationForm) }}
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.pseudo) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.pseudo) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.prenom) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.prenom) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.nom) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.nom) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.telephone) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.telephone) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.email) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.email) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.campus) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.campus) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.roles) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.roles) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.actif) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.actif) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.plainPassword.first) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.plainPassword.first) }}
+                </div>
+            </div>
+
+            <div class="form-group row">
+                {{ form_label(registrationForm.plainPassword.second) }}
+                <div class="col-sm-12 col-lg-8">
+                    {{ form_widget(registrationForm.plainPassword.second) }}
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
-    <button type="submit" class="btn">Register</button>
+    <div class="text-center">
+        <button type="submit" class="btn btn-orange">Enregistrer</button>
+    </div>
+
     {{ form_rest(registrationForm) }}
+
     {{ form_end(registrationForm) }}
+
+
+</div>
 {% endblock %}
