--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -115,7 +115,11 @@
                             {% endfor %}
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{{ path('home') }}">Accueil <span class="sr-only">(current)</span></a>
+                        </li>
+                        <hr>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path('accueil') }}">Les sorties</a>
                         </li>
                         <hr>
                         <li class="nav-item">
